[metadata]
name = quilt-lang
author = Richie Bendall
author_email = richiebendall@gmail.com
description = A Python library that lets you write less code to do more things.
url = https://github.com/Richienb/quilt
requires-python = >=3.6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Environment :: Plugins
    Environment :: Web Environment
    Topic :: Internet
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Topic :: System
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = quilt_lang
install_requires =
    clipboard ~= 0.0.4
    colour ~= 0.1.5
    loremipsum ~= 1.0.5
