[metadata]
name = quilt-lang
author = Richie Bendall
author_email = richiebendall@gmail.com
license = Apache Software License
description = A Python library that lets you write less code to do more things.
url = https://github.com/Richienb/quilt
requires-python = >= 2.6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Environment :: Plugins
    Environment :: Web Environment
    Topic :: Internet
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Topic :: System
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = quilt_lang
install_requires =
    six ~= 1.12.0
